# deno_ffi

./: Cargo.toml  README.md  ___.d.ts  ___.js  ____bg.js  ____bg.wasm  ____bg.wasm.d.ts  bindings.json
bindings/: bindings.ts
examples/: comp.ts
pkg/: comp.d.ts  comp.js  comp_bg.wasm  comp_bg.wasm.d.ts
src/: lib.rs
web/: index.html  server.tsx
