[package]
name = "deno_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_bindgen = "0.7.0"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.83"
serde-wasm-bindgen = "0.4.5"

[lib]
name = "comp"
crate-type = ["cdylib"]